Added image to README

--- a/wine_app/ml_models/Wine-Red.ipynb
+++ b/wine_app/ml_models/Wine-Red.ipynb
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -582,16 +582,6 @@
       "C:\\Users\\Ishan SS\\anaconda3\\lib\\site-packages\\seaborn\\_decorators.py:36: FutureWarning: Pass the following variable as a keyword arg: x. From version 0.12, the only valid positional argument will be `data`, and passing other arguments without an explicit keyword will result in an error or misinterpretation.\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x19005210160>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -607,7 +597,17 @@
     }
    ],
    "source": [
-    "sns.countplot(data.quality)"
+    "count_plot=sns.countplot(data.quality)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = count_plot.get_figure()\n",
+    "fig.savefig(\"CountPlot.png\") "
    ]
   },
   {
